--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,39 +1,106 @@
 //import all arccorp vars
-@use "~arccorp-vars/src/scss/main";
+@use "~arccorp-vars/dist/scss/main.scss";
 
-.arc-advanced-analytics-page{
-  width: 100%;
+.ada-solutions {
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  .product-header {
+    color: main.$white;
+  }
+  .product-callout-copy {
+    max-width: 850px;
+    font-family: SourceSansPro-Light, Arial, Helvetica, sans-serif;
+    margin-bottom: 120px;
+    span {
+      color: main.$airfield;
+    }
+    span.white {
+      color: main.$white;
+    }
+  }
 
-  span {
-    color: main.$airfield;
+  .ada-solutions-card {
+    background: main.$tarmac;
+    padding: 45px 30px;
+    color: main.$landing;
+    border-radius: main.$border-radius-lg;
+    font-size: 22px;
+    line-height: 28px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 15px;
+    &.card-1 {
+      background: url("https://www2.arccorp.com/globalassets/products--participation/advanced-data-analytics/ada-solutions-card1.png")
+        center center no-repeat;
+      background-size: cover;
+    }
+    span {
+      color: main.$airfield;
+      font-family: main.$arc-font-semibold;
+    }
+    span.white {
+      color: main.$white;
+    }
+  }
+
+  .ada-solutions-icon {
+    text-align: center;
+    img {
+      padding-bottom: 20px;
+    }
+    .ada-solutions-icon-title {
+      font-family: main.$arc-font-semibold;
+      font-size: 21px;
+      line-height: 24px;
+      color: main.$white;
+      padding-bottom: 20px;
+    }
+    .ada-solutions-icon-copy {
+      margin: 0 auto;
+      font-size: 18px;
+      line-height: 22px;
+      color: main.$landing;
+      padding-bottom: 20px;
+    }
   }
 }
 
-.arc-advanced-analytics-jumbo-container {
-  background-color: main.$black;
-  background-image: url("https://www2.arccorp.com/globalassets/homepage/redesign/chip-background.png");
-  background-repeat: no-repeat;
-  background-position: center top;
-}
+.advanced-data-analytics-page {
+  width: 100%;
 
-.arc-advanced-h1 {
-  padding-top: 350px;
-  padding-bottom: 75px;
-  font-family: main.$arc-font-bold;
-  font-size: 66px;
-  color: main.$white;
-}
+  .arc-sticky-inner {
+    background: main.$tarmac;
+  }
 
-.arc-advanced-analytics-subtitle {
-  padding-top: 40px;
-  color: main.$landing;
-  border-top: 1px solid;
-  font-size: 44px;
-}
+  .product-eyebrow {
+    color: main.$airfield;
+  }
 
-.arc-advanced-btn {
-  background-color: main.$airfield;
-  border-color: main.$airfield;
-  width: 217px;
-  margin-bottom: 40px;
+  .product-header {
+    font-family: main.$arc-font-semibold;
+  }
+
+  .atd-jumbo {
+    padding-top: 340px;
+    background-position: top center;
+
+    .ctaBtn {
+      color: main.$tarmac;
+      background: main.$airfield;
+      border-color: main.$airfield;
+
+      &:hover {
+        color: main.$tarmac;
+        background: main.$airfield;
+        border-color: main.$airfield;
+        opacity: 0.8;
+      }
+    }
+    .product-callout-copy span {
+      color: main.$airfield;
+    }
+  }
 }
