--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,30 @@
 //import all arccorp vars
 @use "~arccorp-vars/dist/scss/main.scss";
 
+#app {
+  color: #414042;
+  min-height: 80vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+
+  .loading {
+    color: #dddddd;
+    vertical-align: middle;
+    width: 100%;
+    div {
+      text-align: left !important;
+    }
+    .loading-icon {
+      text-align: center !important;
+      color: #dddddd;
+      display: block;
+      font-size: 70px;
+      margin: 0 auto;
+    }
+  }
+}
+
 .ada-solutions {
   background-position: top center;
   background-size: cover;
