--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -121,6 +121,7 @@
     align-items: center;
     justify-content: center;
     width: 96px;
+    font-size: 25px;
   }
 
   .arc-email-component-name {
