try pushing hover override

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -181,9 +181,7 @@
   }
 }
 
-table.btn.btn-primary.email-btn a{
-    &:hover {
-    background-color: #189bb0 !important;
-    border-color: #189bb0 !important;
-    }
+a.email-btn:hover {
+  background-color: #189bb0 !important;
+  border-color: #189bb0 !important;
 }
