--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -181,7 +181,12 @@
   }
 }
 
-a.email-btn:hover {
+.btn-primary a:hover {
+  background-color: #189bb0 !important;
+  border-color: #189bb0 !important;
+}
+
+.btn.btn-primary a.email-btn:hover {
   background-color: #189bb0 !important;
   border-color: #189bb0 !important;
 }
