--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -1,8 +1,48 @@
 .ReactModalPortal {
-
   .modal-close {
     font-size: 22px;
     cursor: pointer;
+  }
+  .modal-header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 20px 1rem 40px;
+    border-bottom: 1px solid #dee2e6;
+  }
+
+  .modal-title {
+    color: #2a2b2c;
+    font-family: SourceSansPro-SemiBold, Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    line-height: 1.2;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .modal-body {
+    font-size: 14px;
+    color: #2a2b2c;
+    position: relative;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 40px;
+    padding-top: 30px;
+  }
+
+  .modal-footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.75rem 0.75rem 0;
+    border-top: 1px solid #dee2e6;
+  }
+
+  .modal-footer > * {
+    margin: 0.25rem;
   }
 
   .ReactModal__Content {
