fix max height for modal popups

--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -60,7 +60,7 @@
     margin-right: -50%;
     transform: translate(-50%, -50%) !important;
     border: none;
-    // max-height: 100vh;
+    max-height: 100vh;
   }
 }
 
