update for two column

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,6 +44,14 @@
   padding: 30px 0;
 }
 
+.arc-email-sidebar-instructions {
+  color: #ffffff;
+  padding: 0 30px 15px;
+  ul li {
+    color: #ffffff;
+  }
+}
+
 .arc-email-sortable-item-container {
   font-family: main.$arc-font-semibold;
   position: relative;
